k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper
  namespace: default
  labels:
    app: gatekeeper
spec:
  selector:
    app: gatekeeper
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
